--- a/embedded-case/platformio.ini
+++ b/embedded-case/platformio.ini
@@ -16,4 +16,5 @@ lib_deps =
 	adafruit/Adafruit LSM303DLHC@^1.0.4
 	knolleary/PubSubClient@^2.8
 	panstamp/SRAM@^1.0.1
+	arduino-libraries/NTPClient@^3.2.1
 monitor_speed = 115200
