--- a/embedded-watch/platformio.ini
+++ b/embedded-watch/platformio.ini
@@ -10,8 +10,9 @@
 
 [env:lolin32]
 platform = espressif32
-board = lolin32
+board = lolin32_lite
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
-	lvgl/lvgl@^9.2.2
 	bodmer/TFT_eSPI@^2.5.43
+	lvgl/lvgl@9.1.0
