--- a/embedded-case/.vscode/settings.json
+++ b/embedded-case/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "idf.port": "/dev/ttyUSB0"
+    "idf.port": "/dev/ttyUSB0",
+    "idf.espIdfPath": "/home/alex/esp/v5.4/esp-idf",
+    "idf.toolsPath": "/home/alex/.espressif",
+    "idf.pythonInstallPath": "/usr/bin/python"
 }
