--- a/embedded-watch/platformio.ini
+++ b/embedded-watch/platformio.ini
@@ -8,10 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:lolin32]
+[env:esp32dev]
 platform = espressif32
-board = lolin32
+board = esp32dev
 framework = arduino
-lib_deps = 
-	lvgl/lvgl@^9.2.2
-	bodmer/TFT_eSPI@^2.5.43
+lib_deps =
+	knolleary/PubSubClient@^2.8
+	panstamp/SRAM@^1.0.1
+	arduino-libraries/NTPClient@^3.2.1
+monitor_speed = 115200
