--- a/embedded-watch/platformio.ini
+++ b/embedded-watch/platformio.ini
@@ -16,3 +16,5 @@ monitor_speed = 115200
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.43
 	lvgl/lvgl@9.1.0
+	arduino-libraries/NTPClient@^3.2.1
+	knolleary/PubSubClient@^2.8
